    * 3903 FIX: mssql.vbs: Fixed support for MSSQL server 2016
    * 3967 FIX: raritan_emx: Fixed broken check (wrong include temperature.includes)

    Multisite:
    * 3902 FIX: Graph search view: Changing painter options made page empty

    WATO:
    * 3821 FIX: WATO Network Scan: Fixed risk of loosing site tags when performing a network scan...


1.2.8p12:
    Core & Setup:
    * 3857 FIX: Creation of crash reports could lead to further bugs...
    * 3889 FIX: Fixed incompatiblity with Python 2.4 (CentOS 5.5) introduced with 1.2.8p11...
    * 3737 FIX: Fixed slow activation of changes due to loss of IP address cache...
    * 3893 FIX: Predictive levels: Improved handling of broken prediction files (empty files)...

    Checks & Agents:
    * 3934 mssql.vbs now detects MSSQL Server 2016 instances
    * 3837 FIX: Fixed empty check if lnx_if info contains additional line...
    * 3804 FIX: Datasource programs: fixed possible Check_MK Helper exception when creation of subprocess fails
    * 3808 FIX: df.include: fixed incorrect levels calculations on very small filesystems...
    * 3809 FIX: windows agent: no longer truncates plugin output, no longer freezes when plugin produces too much output...
    * 3813 FIX: check_mail: fixed missing base64 decoding on multipart mails
    * 3888 FIX: df checks: Fixed invalid displayed WARN / CRIT lines in graphs when using "bytes left" thresholds
    * 3840 FIX: cisco_qos: Fixed wrong units in graphs...
    * 3890 FIX: check_mk_agent.openbsd: Fixed broken MRPE checks
    * 3814 FIX: win_netstat: fixed unicode warning while parsing data
    * 3880 FIX: check_sql: fixed missing number in check details
    * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
    * 3818 FIX: windows agent: fixed 2 bugs related to mrpe...
    * 3748 FIX: vertias_vcs: Fix empty agent section for standard xinetd configuration...
    * 3935 FIX: FIX avaya_45xx_cpu: check got UNKNOWN using Nagios core