@@ -1,0 +1,11 @@
+Title: Notifications / Alert handling: Fixed configuring nth notifications without state changes
+Level: 1
+Component: notifications
+Compatible: compat
+Version: 1.2.8p13
+Date: 1476960641
+Class: fix
+
+This is especially important for the Enterprise Edition specific alert handling when constructing
+rules matching on the nth check attempt. But it has been added as generic option for notifications
+and alert handling.
